--- a/Bai01/Bai01.vcxproj
+++ b/Bai01/Bai01.vcxproj
@@ -130,7 +130,13 @@
     <ClCompile Include="Class phan so.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="Class sinh vien 1.cpp" />
+    <ClCompile Include="Class sinh vien 1.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Liet ke SV theo lop.cpp" />
+    <ClCompile Include="Sap xep SV theo lop.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Tong 2 phan so.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
