--- a/Bai01/Bai01.vcxproj.filters
+++ b/Bai01/Bai01.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="Class sinh vien 1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Sap xep SV theo lop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Liet ke SV theo lop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
